deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym-website-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gym-website
  template:
    metadata:
      labels:
        app: gym-website
    spec:
      nodeName: worker-node
      containers:
      - name: gym-react-app
        image: priyabratakhandual/gym-react_mywebsite
        ports:
        - containerPort: 3000
