gym-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gym-website-service
spec:
  type: ClusterIP
  selector:
    app: gym-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
