service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitjsclock-service
spec:
  selector:
    app: gitjsclock
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30085
