gym-ingress.yaml
# Ingress rule for gym-website app
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gym-website-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: 3.110.45.98.nip.io  # Replace with your EC2 public IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gym-website-service
                port:
                  number: 80
